feat: implementation of workflow of tests and test of comment